[project]
name = "2026-05-dummy-repo-prs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Travis Dent", email = "travis@pugillum.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
2026-05-dummy-repo-prs = "2026_05_dummy_repo_prs:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
